--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "amplifytest",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server" : "tsc src/server/app.ts"
   },
   "author": "",
   "license": "ISC",
