Docs | package.json : tsc 컴파일 빌드 명령어 추가

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server" : "ts-node src/server/app.ts"
+    "server" : "ts-node src/server/app.ts",
+    "build" : "tsc"
   },
   "author": "",
   "license": "ISC",
