--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server" : "ts-node src/server/app.ts",
-    "build" : "tsc"
+    "build": "tsc && npm run copy-public",
+    "copy-public": "cp -r public dist"
   },
   "author": "",
   "license": "ISC",
