--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amplifytest",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/server/app.js",
+  "main": "./dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server" : "ts-node src/server/app.ts",
