--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server" : "ts-node src/server/app.ts",
     "build": "tsc && npm run copy-public",
-    "copy-public": "cp -r public dist"
+    "copy-public": "cp -r public dist",
+    "start": "node dist/server/app.js"
   },
   "author": "",
   "license": "ISC",
