--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "./dist/server/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server" : "ts-node src/server/app.ts",
-    "build": "tsc && npm run copy-public",
-    "copy-public": "cp -r public dist",
-    "start": "node dist/server/app.js"
+    "start": "ts-node src/server/index.ts",
+    "build": "tsc",
+    "serve": "node dist/server/index.js",
+    "postbuild": "chmod +x bin/postbuild.sh && ./bin/postbuild.sh"
   },
   "author": "",
   "license": "ISC",
